align fixes

--- a/styles.css
+++ b/styles.css
@@ -17,7 +17,7 @@ body {
   font-size: 1.6rem;
   position:absolute;
   left: 6%;
-  top: 10%;
+  top: 5%;
   width: 75%;
 }
 
@@ -27,7 +27,7 @@ body {
     font-size: 12rem;
     position:absolute;
     left: 16%;
-    top: 30%;
+    top: 25%;
   }
 
 /* .far {
